@startuml ClassDiagram_Overview
' v2025.07.29
' ステレオタイプの色設定
skinparam class {
    BackgroundColor<<MonoBehaviour>> LightBlue
    BackgroundColor<<ScriptableObject>> LightGreen
    BackgroundColor<<Interface>> LightYellow
    BackgroundColor<<static>> LightGray
}

' --- インターフェース定義 ---
interface IMovable <<Interface>>
interface IShootable <<Interface>>

' --- マネージャー ---
class SystemManager <<MonoBehaviour>>
class DanmakuGameManager <<MonoBehaviour>>

' --- エンティティ基盤 ---
abstract class GameEntityController <<MonoBehaviour>>
class GameEntity <<ScriptableObject>>
class GameEntityProperty <<ScriptableObject>>

' --- Player ---
class PlayerController <<MonoBehaviour>>
class Player <<ScriptableObject>>
class PlayerProperty <<ScriptableObject>>

' --- Enemy ---
class EnemyController <<MonoBehaviour>>
class Enemy <<ScriptableObject>>
class EnemyProperty <<ScriptableObject>>

' --- Bullet ---
class BulletController <<MonoBehaviour>>
class Bullet <<ScriptableObject>>
class BulletProperty <<ScriptableObject>>

' --- パターン関連 ---
abstract class PatternBase <<ScriptableObject>>
abstract class MovePatternBase <<ScriptableObject>>
abstract class ShootPatternBase <<ScriptableObject>>
class LoopPattern <<ScriptableObject>>
class ParallelPattern <<ScriptableObject>>
class SequencePattern <<ScriptableObject>>
abstract class EmissionShape <<ScriptableObject>>
class SharedAngle <<ScriptableObject>>

' --- その他 ---
class EnemyLifeGaugeController <<MonoBehaviour>>
class AngleUtility <<static>>

' --- 継承関係 ---
GameEntityController <|-- PlayerController
GameEntityController <|-- EnemyController
GameEntityController <|-- BulletController
GameEntity <|-- Player
GameEntity <|-- Enemy
GameEntity <|-- Bullet
GameEntityProperty <|-- PlayerProperty
GameEntityProperty <|-- EnemyProperty
GameEntityProperty <|-- BulletProperty
PatternBase <|-- MovePatternBase
PatternBase <|-- ShootPatternBase
PatternBase <|-- LoopPattern
PatternBase <|-- ParallelPattern
PatternBase <|-- SequencePattern
IMovable <|.. GameEntityController
IShootable <|.. GameEntityController

' --- 関連 ---
PlayerController ..> DanmakuGameManager : "calls"
GameEntityController o-- GameEntity : " _entity"
GameEntity o-- "1" GameEntityProperty : " property"
GameEntityProperty o-- PatternBase : "ShootPattern"
GameEntityProperty o-- PatternBase : "MovePattern"
PatternBase ..> GameEntityController : "uses"
ShootPatternBase o-- EmissionShape : "emissionShape"
ShootPatternBase ..> SharedAngle : "uses"
BulletController ..> EnemyController : "calls TakeDamage"
EnemyController ..> EnemyLifeGaugeController : "creates"
AngleUtility ..> PlayerController : "finds"

@enduml
